Add the page-top id and fix a typo

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,6 +10,6 @@
   image: img/projects/yeast.svg
   description: We explore mutant phenotypes of single-deletion strains of S. cerevisiae by appylying novel machine learning approaches.
 
-- name: Precision medecing
+- name: Precision medecin
   image: img/projects/arthritis.svg
   description: We use unsupervised learning to integrate biological and clinical data and find innovative predictors of disease trajectories.
