--- a/_data/members.yml
+++ b/_data/members.yml
@@ -33,8 +33,16 @@
 - name: Josh Dempster
   image: img/team/unknown.png
   title: Data Scientist (Machine Learning)
-  githib: https://github.com/joshdempster
+  github: https://github.com/joshdempster
   linkedin: https://www.linkedin.com/in/joshdempster
+  google_scholar:
+  status: current
+  
+- name: Jordan Bryan
+  image: img/team/unknown.png
+  title: Associate Computational Biologist I
+  github: https://github.com/BuddyBryan
+  linkedin:
   google_scholar:
   status: current
 
